manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: five31-frontend
  namespace: five31
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: five31-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: five31-frontend
    spec:
      containers:
        - name: five31-frontend
          image: ghcr.io/bakseter/five31/frontend:latest
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
