manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: five31-backend
  namespace: five31
  labels:
    app.kubernetes.io/name: five31-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: five31-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: five31-backend
    spec:
      containers:
        - name: five31-backend
          image: ghcr.io/bakseter/five31/backend:latest
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
---
apiVersion: v1
kind: Service
metadata:
  name: five31-backend
  namespace: five31
spec:
  selector:
    app.kubernetes.io/name: five31-backend
  ports:
    - port: 8080
      targetPort: 8080
