manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: five31-frontend
  namespace: five31
  labels:
    app.kubernetes.io/name: five31-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: five31-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: five31-frontend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: web
              topologyKey: bakseter.net/physical-node
      containers:
        - name: five31-frontend
          image: ghcr.io/bakseter/five31/frontend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp/nginx
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: nginx-tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
---
apiVersion: v1
kind: Service
metadata:
  name: five31-frontend
  namespace: five31
spec:
  selector:
    app.kubernetes.io/name: five31-frontend
  ports:
    - port: 3000
      targetPort: 3000
