manifests/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: five31
  namespace: five31
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-int
      namespace: tailscale

  hostnames:
    - five31.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: five31-frontend
          port: 80
          group: '' # for argocd diff
          kind: Service # for argocd diff
          weight: 1 # for argocd diff
