manifests/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: five31-oidc
  namespace: five31
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: five31

  oidc:
    provider:
      issuer: https://authentik.bakseter.no/application/o/five31/
    clientID: five31
    clientSecret:
      # Secret in this namespace with the client secret under key `client-secret`.
      name: five31-oidc-client-secret
    redirectURL: https://five31.bakseter.net/oauth2/callback
    logoutPath: /logout
    scopes:
      - openid
      - profile
      - email
      - offline_access
    forwardAccessToken: true
    refreshToken: true
    cookieDomain: five31.bakseter.net
