manifests/backend-ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: five31-backend
  namespace: five31
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: five31-backend

  ingress:
    # Allow ingress from frontend
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: five31-frontend
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    # Allow egress to kube-dns (needed for DNS resolution)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    # Allow egress to database
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    # Allow egress to Google SSO
    - toFQDNs:
        - matchName: 'www.googleapis.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
