manifests/frontend-ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: five31-frontend
  namespace: five31
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: five31-frontend

  ingress:
    # TODO: harden
    - toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

  egress:
    # Allow egress to kube-dns (needed for DNS resolution)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    # Allow egress to backend
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: five31-backend
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    # Allow egress to Google SSO
    - toFQDNs:
        - matchName: 'oauth2.googleapis.com'
        - matchName: 'accounts.google.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
